Bug 124486 - Arrow keys do not scroll the html widget when focus on article list
Summary: Arrow keys do not scroll the html widget when focus on article list
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.2.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2006-03-29 13:21 UTC by Sebastian Kratzert
Modified: 2009-07-14 16:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Set focus to article view to prevent switching to next feed by arrow-down key (415 bytes, patch)
2006-08-11 23:11 UTC, Sebastian Kratzert
Details
This patch adds a new action to scroll the article (1020 bytes, patch)
2008-10-07 17:18 UTC, Patrick Hallen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kratzert 2006-03-29 13:21:09 UTC
Version:           1.2.2 (using KDE 3.5.2, Gentoo)
Compiler:          gcc version 3.4.5 (Gentoo 3.4.5, ssp-3.4.5-1.0, pie-8.7.9)
OS:                Linux (i686) release 2.6.15-gentoo-r7

Hi,

I often accidently switch to another feed when i only want to scroll down an article, because i forgot to change the focus to the html widget before pressing an arrow key.
I would like to have the behavior of KMail. There you have to use Alt-arrow to navigate in the folder tree.
Current behavior is very inconvenient for keyboard-only users, because you have to press TAB multiple times to get the right focus.

Greets,
Sebastian
Comment 1 Frank Osterfeld 2006-03-29 15:03:42 UTC
Actually it should work just like this (if the main tab is active, not an additional browser tab)

1) Left/Right: previous/next article
2) Alt+Left/Right: previous/next feed
3) Up/Down: Scroll article viewer

Assuming the default shortcuts are used.
1) and 3) should just work (they do here (TM)). But I noticed a problem with 2) in case the article viewer is focused.

How exactly does it behave for you?
Comment 2 Sebastian Kratzert 2006-03-29 16:24:08 UTC
1) Works perfectly regardless of current focus.

2) Does only expand/collapse the tree here. And only when focus is on feed list.

3) Does work when focus is on article viewer. It does not work when focus is 
on article list or feed list.

Try to switch to an unread article by pressing "+" and scroll down the shown the article afterwards by pressing "Down".
It will switch to the next feed when focus was on feed list.
It will do nothing when focus was on article list.
Comment 3 Clemens Wehrmann 2006-06-08 11:34:45 UTC
This is annoying for mouse users also:
Using akregator 1.2.2 from within kontact on Ubuntu Dapper
* click on feed
* wait 5 seconds for article list to show (what happened in 1.2.2?)
* Press PageDown
-> akregator freezes for 5 seconds and then switches to the feed at the bottom of the feed list.

Interestingly CursorUp/Down seems to work on the article list as expected so it's not entirely a focus issue as the one when switching tabs (94526).

Left/Right and Alt+Left/Right don't seem to do anything for me in akregator.
Comment 4 Sebastian Kratzert 2006-08-11 23:11:43 UTC
Created attachment 17344 [details]
Set focus to article view to prevent switching to next feed by arrow-down key

Attached patch fixes the issue for me. I don't have a real understanding of
akregator internals, so this might be the wrong approach.

BTW: Stupid me forgot to mention that the problem appeared only when akregator
was embedded in kontact.
Comment 5 Jakob Petsovits 2006-12-03 20:02:34 UTC
PgUp/PgDown don't work properly at all. Steps to reproduce:
- Start up Akregator (v1.2.5).
- Click-select on a feed, then click-select a scrollable article.
- Press PgDown and watch it fail.
- Click into the article view, then press PgDown and watch it succeed.

Would it be difficult to adopt the focus-less approach of KMail? It seems to provide a much better and consistent keyboard experience than the current focus-driven approach.
Comment 6 Jakob Petsovits 2008-06-01 22:23:08 UTC
SVN commit 815441 by jpetso:

Assign the article view as focus proxy of the article list view.
That fully takes away focus from the article list, fixing stuff
like PgDn/PgUp not working when the list has been clicked.

Fixes part of bug 124486, whereas Ctrl+arrow for the
per-feed navigation actions still doesn't work,
this commit doesn't change anything in that regard.

CCBUG: 124486


 M  +0 -5      articlelistview.cpp  
 M  +0 -3      articlelistview.h  
 M  +2 -0      articleviewer.cpp  
 M  +1 -0      mainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=815441
Comment 7 Tomas Åkesson 2008-06-19 12:59:08 UTC
This bug has reappeared in Akregator Version 1.2.50, Using KDE 4.00.80 (KDE 4.0.80 >= (KDE 4.1 Beta1) (Kubuntu packages).
Comment 8 Jakob Petsovits 2008-06-19 14:20:02 UTC
"Kubuntu packages" would mean "the Akregator version in 4.1 beta1", right?

If I may quote the beta1 release announcement,

"May 27, 2008 (The INTERNET). The KDE Project is proud to announce the first beta release of KDE 4.1."

I would tend to think that May 27 was still *before* I committed this to SVN on June 1. Please wait until the beta2 packages come out, and and if it persists there, then there might be an issue.
Comment 9 Patrick Hallen 2008-08-13 22:05:50 UTC
This bug has reappeared for me, too. I'm using Akregator 1.2.50 (KDE 4.1) from Debian.

In KDE 3.5 I could use Ctrl + [Down,Up] to go down in the tree and just using the up- and down-arrows would scroll the article. 
In the new version Ctrl + [Down,Up] doesn't work at all. Just pressing up or down scrolls the active widget, so I have either to use tab multiple times to activate the right widget or use my mouse to click on the widget, which I want to scroll. This breaks my keyboard-only usage of Akregator, so I would be really happy about a fix!
Comment 10 Patrick Hallen 2008-10-07 17:18:55 UTC
Created attachment 27733 [details]
This patch adds a new action to scroll the article

For me I fixed that one with the attached patch. It adds a new action for scrolling up and down the article, to which you can assign any shortcut (up/down arrow is default at the moment).
Imho this is better than activating the article view as default, because this way you can assign any key to scroll the article and this behavior is documented in the shortcut menu. However, with the version in trunk, you had to switch the focus to the articlewidget to scroll it, what sucked for keyboard users.

Disclaimer: This is the first time I wrote a few lines with KDE/Qt, so I don't know if I made this change the "right way" (tm). For me it made controlling akregator with only my keyboard usable again. So dear developers, please be nice. ;)
Comment 11 Gene Seto 2008-11-25 22:13:44 UTC
Tested using r887704 compiled with gcc version 4.3.2 (Gentoo 4.3.2 p1.1).
Update for triage:

Depending on which widget has focus different things happen. 

Feed List in Focus & Normal View Mode
Up/Down keys changes feed. & Left/Right keys change article
Trying to scroll the article no longer possible with keyboard unless article has focus. 

Article List in Focus & Normal View Mode
Up/Down keys do nothing & Left/Right changes articles

Random Article in Focus & Norm View Mode
Up/Down keys scroll article & Left/Right changes articles

-Hum
Comment 12 Frank Osterfeld 2009-07-14 16:00:12 UTC
SVN commit 996521 by osterfeld:

- Force focus to always reach the articleviewer, even if in subscriptionlist has been clicked, fixes bug 124486
patch by Alexander Elbs

BUG:124486



 M  +1 -0      mainwidget.cpp  
 M  +1 -0      subscriptionlistview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=996521