- Force focus to always reach the articleviewer, even if in subscriptionlist has been clicked, fixes bug 124486 patch by Alexander Elbs

BUG:124486


svn path=/branches/KDE/4.3/kdepim/; revision=996521